tests/chainsaw/disallow-host-namespaces/bad-pod-hostipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostipc
spec:
  hostIPC: true
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
