tests/chainsaw/disallow-host-namespaces/bad-pod-hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostnetwork
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
