tests/chainsaw/disallow-host-namespaces/bad-pod-hostpid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostpid
spec:
  hostPID: true
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
